--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
     "description": "Система фильтрации JSON по типам запросов",
     "main": "index.js",
     "scripts": {
-      "start": "node index.js"
+        "start": "node index.js"
     },
     "dependencies": {
-      "express": "^4.18.2",
-      "body-parser": "^1.20.2"
+        "body-parser": "^1.20.2",
+        "cors": "^2.8.5",
+        "express": "^4.18.2"
     }
-  }
+}
